add script to index.html modified Landing.jsx text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Goran Tanasic is a talented web developer who creates amazing digital experiences. With a focus on user experience, Goran brings your website ideas to life with precision and style. Contact Goran today to learn how he can help you craft a compelling online presence that engages and inspires your audience."
+      content="Goran Tanasic is a talented developer who creates amazing digital experiences. With a focus on user experience, Goran brings your website ideas to life with precision and style. Contact Goran today to learn how he can help you craft a compelling online presence that engages and inspires your audience."
     />
     <link
       rel="stylesheet"
